--- a/epsilon-utils/pom.xml
+++ b/epsilon-utils/pom.xml
@@ -43,4 +43,88 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.epsilon/epsilon-workflow -->
+		<dependency>
+			<groupId>org.eclipse.epsilon</groupId>
+			<artifactId>epsilon-workflow</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.epsilon</groupId>
+			<artifactId>epsilon-emf</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.epsilon</groupId>
+			<artifactId>epsilon-emf</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.eclipse.epsilon</groupId>
+			<artifactId>epsilon-hutn</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.eclipse.epsilon</groupId>
+			<artifactId>epsilon-workflow-emf</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.skife.url</groupId>
+			<artifactId>url-scheme-registry</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.twdata.maven/mojo-executor -->
+		<dependency>
+			<groupId>org.twdata.maven</groupId>
+			<artifactId>mojo-executor</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.mapping.ecore2xml -->
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.eclipse.uml2.uml/resources -->
+		<dependency>
+			<groupId>org.eclipse.uml2.uml</groupId>
+			<artifactId>resources</artifactId>
+			<version>5.0.0-v20140602-0749</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.emf</groupId>
+					<artifactId>ecore</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.emf.ecore</groupId>
+					<artifactId>xmi</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.emf.mapping</groupId>
+					<artifactId>ecore2xml</artifactId>
+				</exclusion>
+
+			</exclusions>
+		</dependency>
+	</dependencies>
 </project>
