--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </licenses>
     
     <properties>
-        <epsilon-runtime-version>1.1.0</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.4_feature_1_verify_EVL_rules-38</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
@@ -96,6 +96,30 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>2.3.1</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <extension>true</extension>
+                            <sources>
+                                <source>src/main/resources/epsilon_plugin_v1.xsd</source>
+                            </sources>
+                            <xjbSources>
+                                <xjbSoure>src/main/bindings/SkipElementProperties.xjc</xjbSoure>
+                            </xjbSources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
         <pluginManagement>
