#2 create configuration POJO

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
     </licenses>
     
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <epsilon-runtime-version>1.1.4_feature_1_verify_EVL_rules-38</epsilon-runtime-version>
     </properties>
     <build>
@@ -92,6 +94,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
