--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <epsilon-runtime-version>1.1.4_feature_1_verify_EVL_rules-38</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.4-SNAPSHOT</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
@@ -104,8 +104,15 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>2.4</version>
                 <extensions>true</extensions>
+                <!--dependencies>
+                    <dependency>
+                        <groupId>it.yobibit</groupId>
+                        <artifactId>jaxb-lombok-plugin</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                </dependencies-->
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
