--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <epsilon-runtime-version>1.1.4-SNAPSHOT</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.4_develop-42</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
@@ -243,7 +243,17 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-io</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
     
     
