--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <epsilon-runtime-version>1.1.4_develop-44</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.4</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
