--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <epsilon-runtime-version>1.1.4</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.5_feature__9_UpdateEpsilonTo_1_5_1-53</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
@@ -63,6 +63,7 @@
                         <configuration>
                             <sources>
                                 <source>src/main/java</source>
+                                <source>${project.build}/generated-source/jaxb</source>
                             </sources>
                         </configuration>
                     </execution>
