--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hu.blackbelt.epsilon</groupId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
     <artifactId>epsilon-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     
