--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <epsilon-runtime-version>1.1.5</epsilon-runtime-version>
+        <epsilon-runtime-version>1.1.6-SNAPSHOT</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
