--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <epsilon-runtime-version>1.2.0_feature_TRASNFER-79</epsilon-runtime-version>
+        <epsilon-runtime-version>1.2.0_develop-83</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
