--- a/wercker.yml
+++ b/wercker.yml
@@ -19,7 +19,7 @@ build:
       
     - wercker/maven:
       goals: versions:set
-      maven_opts: -DnewVersion=${VERSION_NUMBER}
+      maven_opts: -Dtycho.mode=maven -DnewVersion=${VERSION_NUMBER}
       cache_repo: true
 
     - wercker/maven:
