Revert "JNG-709 Moving Nexus (fix #2?)"
This reverts commit 3573c979e1b51fbd064a01112799b713f72a157d.

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <epsilon-runtime-version>1.2.0.develop_101</epsilon-runtime-version>
+        <epsilon-runtime-version>1.2.0_develop-83</epsilon-runtime-version>
     </properties>
     <build>
         <plugins>
