--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,20 @@
         </profile>
         
         <profile>
+            <id>release-dummy</id>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>dummy-distribution</id>
+                    <url>file:///tmp/maven-snapshot/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>dummy-distribution</id>
+                    <url>file:///tmp/maven-release/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
+        <profile>
             <id>release-judong</id>
             <distributionManagement>
                 <snapshotRepository>
