--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hu.blackbelt.epsilon</groupId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <artifactId>epsilon-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     
@@ -43,6 +43,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <epsilon-runtime-version>1.2.1</epsilon-runtime-version>
+        <revision>1.2.1-SNAPSHOT</revision>
     </properties>
     <build>
         <plugins>
