JNG-3332: fix pom

--- a/pom.xml
+++ b/pom.xml
@@ -420,7 +420,7 @@
         </dependency>
     </dependencies>
 
-    <profiles>                                                                                      <!--done-->
+    <profiles>
         <profile>
             <id>modules</id>
             <activation>
