--- a/pom.xml
+++ b/pom.xml
@@ -836,6 +836,9 @@
                                 <phase>process-sources</phase>
                                 <configuration>
                                     <licenseName>epl_v2</licenseName>
+									<excludes>
+										<exclude>**/*.json</exclude>
+									</excludes>
                                 </configuration>
                             </execution>
                             <execution>
